--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "https://snipcart-hugo-forestry.netlify.com/"
+baseURL = "https://fosters-lab-ecommerce.netlify.com/"
 languageCode = "en-us"
-title = "CheeseCity"
+title = "Foster's Lab"
